--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,6 +2,8 @@ destination: "../../websites/R/ppgamer/"
 url: "https://trevorldavis.com/R/ppgamer"
 development:
     mode: auto
+template:
+  bootstrap: 5
 reference:
     - title: "Piecepack puzzle solvers"
       desc: "Functions to solve puzzles"
